updating biosimspace tutorial

--- a/3_Simulation_Setup/BioSimSpaceTutorial/01_introduction.ipynb
+++ b/3_Simulation_Setup/BioSimSpaceTutorial/01_introduction.ipynb
@@ -17,11 +17,11 @@
     "* What are the key concepts behind BioSimSpace.\n",
     "* How to set up molecular systems ready for simulation.\n",
     "* How to configure and run a range of molecular dynamics protocols using different simulation engines.\n",
-    "* How to write interoperable worflow components and run them in a variety of ways.\n",
+    "* How to write interoperable workflow components and run them in a variety of ways.\n",
     "\n",
     "## What is BioSimSpace?\n",
     "\n",
-    "As a computational chemist you are likely overwhelmed by the amount of different software packages that are available to you. Having choice is a good thing, but too much can become a burden. I'm sure you have all come across at least one of the following:\n",
+    "As a computational chemist, you are likely overwhelmed by the amount of different software packages that are available to you. Having choice is a good thing, but too much can become a burden. I'm sure you have all come across at least one of the following:\n",
     "\n",
     "* I know how to solve the problem with package X but I want to use package Y.\n",
     "* How can I share my script with a collaborator who doesn't use the same software stack?\n",
@@ -38,7 +38,7 @@
     "\n",
     "* Write generic workflow components _once_ in a package-agnostic language.\n",
     "* Run the same script from the command-line, Jupyter, or within a workflow engine.\n",
-    "* Use the most suitable package that is availabe on your computer.\n",
+    "* Use the most suitable package that is available on your computer.\n",
     "* Continue using your favourite package X but be able to share scripts with your collaborator who prefers package Y.\n",
     "* Be able to take advantage of new software packages and hardware resources as and when they become available.\n",
     "\n",
@@ -65,7 +65,7 @@
     "\n",
     "### File conversion\n",
     "\n",
-    "While, broadly speaking, the different molecular dynamics engines offer a similar range of features, their interfaces are quite different. This makes it hard to take expertise in one package and immediately apply it to another. At the heart of this problem is the incompatibility between the molecular file formats used by the different packages. While they all contain the same information, i.e. how atoms are laid out in space and how they interact with each other, the structure of the files is very different. In order to provide interoperability betwen packages we will need to be able to read and write many different file formats, and be able to interconvert between them too.\n",
+    "While broadly speaking, the different molecular dynamics engines offer a similar range of features, their interfaces are quite different. This makes it hard to take expertise in one package and immediately apply it to another. At the heart of this problem is the incompatibility between the molecular file formats used by the different packages. While they all contain the same information, i.e. how atoms are laid out in space and how they interact with each other, the structure of the files is very different. In order to provide interoperability between packages we will need to be able to read and write many different file formats and be able to interconvert between them too.\n",
     "\n"
    ]
   },
@@ -485,6 +485,14 @@
     "print(f\"chains = {new_mol.nChains()}\")\n",
     "new_mol._sire_object.propertyKeys()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a12244ec-e621-4667-800f-7c62aebc3978",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
