--- a/3_Simulation_Setup/BioSimSpaceTutorial/02_molecular_setup.ipynb
+++ b/3_Simulation_Setup/BioSimSpaceTutorial/02_molecular_setup.ipynb
@@ -8,6 +8,11 @@
     "Author: Lester Hedges<br>\n",
     "Email:&nbsp;&nbsp; lester.hedges@bristol.ac.uk\n",
     "\n",
+    "Adapted by:\n",
+    "Antonia Mey<br>\n",
+    "Email:&nbsp;&nbsp; antonia.mey@ed.ac.uk\n",
+    "\n",
+    "\n",
     "___Jupyter Recap___:\n",
     "* Press Shift+Enter to execute a cell and move to the cell below.\n",
     "* Press Ctrl+Enter to execute a cell and remain in that cell.\n",
@@ -15,24 +20,24 @@
     "* Remember that the flow is in the order that you execute cells, which is not necessarily linear in the notebook. Keep track of the numbers in brackets to the left of the cell!\n",
     "\n",
     "\n",
-    "# Molecular setup\n",
+    "# Section I: Molecular setup\n",
     "\n",
     "## Introduction\n",
     "\n",
-    "In this section we will learn how to use BioSimSpace to set up a molecular system ready for simulation. Starting from a molecular topology in the form of a [Protein Data Bank](https://www.rcsb.org/) format file, we will learn how to parameterise molecules using different molecular [force fields](https://en.wikipedia.org/wiki/Force_field_(chemistry)), then solvate them using various [water models](https://en.wikipedia.org/wiki/Water_model).\n",
+    "In this section, we will learn how to use BioSimSpace to set up a molecular system ready for simulation. Starting from a molecular topology in the form of a [Protein Data Bank](https://www.rcsb.org/) format file, we will learn how to parameterise molecules using different molecular [force fields](https://en.wikipedia.org/wiki/Force_field_(chemistry)), then solvate them using various [water models](https://en.wikipedia.org/wiki/Water_model).\n",
     "\n",
     "### A note regarding molecular input\n",
     "\n",
-    "The starting point for many simulations is a molecular topology in the form of a [PDB](https://www.rcsb.org/) file. This file contains information regarding the structure of the molecule (its constituent residues and atoms), the layout of atoms in space (in the form of 3D atomic coordinates), and sometimes additional molecular information such as the formal charge of each atom. What this file does not contain is information describing how the atoms in the molecule _interact_, i.e. what are the functional forms and parameters for the terms in the molecular potential. This file is then used as the input to a _parameterisation engine_, which typically matches the atoms and residues against templates in order to _parameterise_ the molecule with a chosen force field. As such, the accuracy of the original topology is of critical importance: Atoms and residues _must_ have the correct names, and the topology _must_ be complete, i.e. no missing atoms.\n",
+    "The starting point for many simulations is a molecular topology in the form of a [PDB](https://www.rcsb.org/) file. This file contains information regarding the structure of the molecule (its constituent residues and atoms), the layout of atoms in space (in the form of 3D atomic coordinates), and sometimes additional molecular information such as the formal charge of each atom. What this file does not contain is information describing how the atoms in the molecule _interact_, i.e. what are the functional forms and parameters for the terms in the molecular potential. This file is then used as the input to a _parameterisation engine_, which typically matches the atoms and residues against templates in order to _parameterise_ the molecule with a chosen force field. As such, the accuracy of the original topology is of critical importance: Atoms and residues _must_ have the correct names and the topology _must_ be complete, i.e. no missing atoms.\n",
     "\n",
-    "Unfortunately, many tools do a poor job in preparing PDB files, e.g. having quirks with their naming conventions, excluding certain atoms, etc. Since it is impossible to account for all such inconsistencies, which often takes detailed knowledge of the particular system and tool in question, BioSimSpace takes the approach that the original files used to create a starting moleular system should be properly formatted from the outset. We don't want to make guesses as to what the user intended, or leave them confused if unexpected behaviour occurs later down the line.\n",
+    "Unfortunately, many tools do a poor job in preparing PDB files, e.g. having quirks with their naming conventions, excluding certain atoms, etc. Since it is impossible to account for all such inconsistencies, which often takes detailed knowledge of the particular system and tool in question, BioSimSpace takes the approach that the original files used to create a starting molecular system should be properly formatted from the outset. We don't want to make guesses as to what the user intended or leave them confused if unexpected behaviour occurs later down the line.\n",
     "\n",
     "If pre-processing of the PDB file is required, then we recommend using one of the following third-party tools:\n",
     "\n",
     "* [pdb4amber](https://github.com/Amber-MD/pdb4amber)\n",
     "* [PDBFixer](https://htmlpreview.github.io/?https://github.com/openmm/pdbfixer/blob/master/Manual.html)\n",
     "\n",
-    "When present, we do provide rudimentary support for `pdb4amber` via the `BioSimSpace.IO.reaadPDB` function, where passing the `pdb4amber=True` argument will pre-process the file with `pdb4amber` prior to creating a molecular system. However, we choose only to support the _default_ options, since many are experimental and have can have undesirable knock-on effects, e.g. using the `--add-missing-atoms` option strips all chain identifiers from the molecule.\n",
+    "When present, we do provide rudimentary support for `pdb4amber` via the `BioSimSpace.IO.reaadPDB` function, where passing the `pdb4amber=True` argument will pre-process the file with `pdb4amber` prior to creating a molecular system. However, we choose only to support the _default_ options, since many are experimental and can have undesirable knock-on effects, e.g. using the `--add-missing-atoms` option strips all chain identifiers from the molecule.\n",
     "\n",
     "## Parameterisation\n",
     "\n",
@@ -139,6 +144,14 @@
     "N.B. The available Open Force Fields are determined dynamically at import time, so the list above might be different depending on what version of the `openff-toolkit` you have installed.\n",
     "\n",
     "Let's load a small molecule and parameterise it with several supported force fields."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "034a8f28-8b05-45ed-80d6-44f24edcb4c4",
+   "metadata": {},
+   "source": [
+    "## Parametrising a small molecule"
    ]
   },
   {
@@ -360,6 +373,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "26fee75c-c02b-4bf8-878f-bac7f8f22dec",
+   "metadata": {},
+   "source": [
+    "## Protein parametrisation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "substantial-ethnic",
    "metadata": {},
    "source": [
@@ -577,6 +598,110 @@
    "outputs": [],
    "source": [
     "BSS.IO.saveMolecules(\"solvated\", solvated, [\"prm7\", \"rst7\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c03bbe04-bede-44c6-974e-7472d96a3a33",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-success\">\n",
+    "<b>Task 1:</b> Try and parametrise benzene using the smiles string for it: c1ccccc1 with <code>gaff</code> and <code>openFF</code></div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6bb7c6b0-9b5a-495a-8dab-215d241f0303",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution here:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ae128ad-9ac9-4ac6-84ff-088066fb60dc",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "<summary> <mark> Solution: </mark> </summary>\n",
+    "\n",
+    "```Python    \n",
+    "gaff_benzene = BSS.Parameters.gaff(\"c1ccccc1\").getMolecule()\n",
+    "openff_benzene = BSS.Parameters.openff_unconstrained_1_0_0(\"c1ccccc1\").getMolecule()\n",
+    "```\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79c651b6-2ee1-4c59-a7b3-216119514439",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-success\">\n",
+    "<b>Task 2:</b> Take the benzene molecules and solvate them in different box types, how do the number of water molecules differ?</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71eb5ada-1b3a-4f0f-ba7c-974582a1f4f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution here:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d41c2df5-20e1-4b01-a8e3-290b9678b418",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "<summary> <mark> Solution: </mark> </summary>\n",
+    "\n",
+    "```Python    \n",
+    "box_min, box_max = gaff_benzene.getAxisAlignedBoundingBox()\n",
+    "\n",
+    "# Work out the box size from the difference in the coordinates.\n",
+    "box_size = [y - x for x, y in zip(box_min, box_max)]\n",
+    "padding = 15 * BSS.Units.Length.angstrom\n",
+    "box_length = max(box_size) + 2 * padding\n",
+    "\n",
+    "\n",
+    "solvated_benzene = BSS.Solvent.tip3p(molecule=gaff_benzene, box=3 * [box_length])\n",
+    "# visulise the system\n",
+    "view = BSS.Notebook.View(solvated_benzene)\n",
+    "view.system()\n",
+    "\n",
+    "```\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59e5e430-f8d1-458d-8229-6252c3d2bf07",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-success\">\n",
+    "<b>Task 3:</b> Play around with different water models, ion concentration to see what happens</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "086f6414-0074-4fa0-a206-8aa8530d1712",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec91a450-ac22-435a-a520-9a4ccc0e1d2e",
+   "metadata": {},
+   "source": [
+    "------------------------"
    ]
   }
  ],
