--- a/3_Simulation_Setup/BioSimSpaceTutorial/03_molecular_dynamics.ipynb
+++ b/3_Simulation_Setup/BioSimSpaceTutorial/03_molecular_dynamics.ipynb
@@ -8,6 +8,10 @@
     "Author: Lester Hedges<br>\n",
     "Email:&nbsp;&nbsp; lester.hedges@bristol.ac.uk\n",
     "\n",
+    "Adapted by:\n",
+    "Antonia Mey<br>\n",
+    "Email:&nbsp;&nbsp; antonia.mey@ed.ac.uk\n",
+    "\n",
     "___Jupyter Recap___:\n",
     "* Press Shift+Enter to execute a cell and move to the cell below.\n",
     "* Press Ctrl+Enter to execute a cell and remain in that cell.\n",
@@ -19,14 +23,14 @@
     "\n",
     "## Introduction\n",
     "\n",
-    "In this section we will learn how to use BioSimSpace to configure and run some basic molecular dynamics simulations.\n",
+    "In this section, we will learn how to use BioSimSpace to configure and run some basic molecular dynamics simulations.\n",
     "\n",
     "\n",
     "## Protocols\n",
     "\n",
-    "One of the key goals of BioSimSpace was to start a conversation regarding _best practice_ within the biomolecular simulation community and to facilitate the codifying of shareable, re-usable, and extensible simulation protocols.\n",
+    "One of the key goals of BioSimSpace was to start a conversation regarding _best practice_ within the biomolecular simulation community and to facilitate the codifying of shareable, reusable, and extensible simulation protocols.\n",
     "\n",
-    "The [BioSimSpace.Protocol](https://biosimspace.org/api/index_Protocol.html) package defines protocols for a range of common molecular dynamics simulations. We can query the package to ee what protocols are available:"
+    "The [BioSimSpace.Protocol](https://biosimspace.org/api/index_Protocol.html) package defines protocols for a range of common molecular dynamics simulations. We can query the package to see what protocols are available:"
    ]
   },
   {
@@ -69,65 +73,6 @@
    "outputs": [],
    "source": [
     "protocol = BSS.Protocol.Equilibration()\n",
-    "print(protocol)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "opposed-control",
-   "metadata": {},
-   "source": [
-    "Here we can see that the default protocol performs an equlibration at fixed temperature (`temperature_start == temperature_end`) in the NVT ensemble (`pressure=None`) with no restraints (`restraint=None`). The total simulation time is 0.2 nanoseconds with an integration timestep of 2 femtoseconds. The `report_interval` and `restart_interval` govern how frequently information is written to log and restart (and/or trajectory) files respectively.\n",
-    "\n",
-    "If any of these defaults are unsuitable, then you are free to change them by passing in appropriate values for each of the arguments when instantiating the object. In some cases it might be desirable to _override_ the default protocols and set specific values of the arguments that are suitable for a particular project or team. This can be achieved by defining a set of function wrappers that configure and return the protocols using your own defaults.\n",
-    "\n",
-    "As an example, the following configuration could be used to provide alternative defaults for NVT and NPT equlibration protocols. (You could simply re-use the existing protocol name, but here we provide two separate protocols for convenience.)\n",
-    "\n",
-    "```python\n",
-    "# myconfig/Protocol.py\n",
-    "import BioSimSpace as BSS\n",
-    "\n",
-    "# Override the equilibration protocol with some custom defaults. Ideally all\n",
-    "# arguments to the BioSimSpace function would be mapped, but here we use a\n",
-    "# subset for simplicity.\n",
-    "\n",
-    "# A custom equlibration in the NVT ensemble.\n",
-    "def EquilibrationNVT(runtime=5*BSS.Units.Time.nanosecond,\n",
-    "                     report_interval=2500,\n",
-    "                     restart_interval=250000,\n",
-    "                     restraint=\"backbone\"):\n",
-    "    return BSS.Protocol.Equilibration(runtime=runtime,\n",
-    "                                      report_interval=report_interval,\n",
-    "                                      restart_interval=restart_interval,\n",
-    "                                      restraint=restraint)\n",
-    "\n",
-    "# A custom equlibration in the NPT ensemble.\n",
-    "def EquilibrationNPT(runtime=5*BSS.Units.Time.nanosecond,\n",
-    "                     pressure=BSS.Units.Pressure.atm,\n",
-    "                     report_interval=2500,\n",
-    "                     restart_interval=25000,\n",
-    "                     restraint=\"backbone\"):\n",
-    "    return BSS.Protocol.Equilibration(runtime=runtime,\n",
-    "                                      pressure=pressure,\n",
-    "                                      report_interval=report_interval,\n",
-    "                                      restart_interval=restart_interval,\n",
-    "                                      restraint=restraint)\n",
-    "\n",
-    "```\n",
-    "\n",
-    "We could then import the customised protocols from our local configuraton and use them instead, e.g.:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bridal-pakistan",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from myconfig.Protocol import *\n",
-    "\n",
-    "protocol = EquilibrationNVT()\n",
     "print(protocol)"
    ]
   },
@@ -313,61 +258,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "olympic-hearts",
-   "metadata": {},
-   "source": [
-    "If you're an expert in a particular package then BioSimSpace allows you to fully customise the process by tweaking the configuration options and command-line arguments. Read the help documentation for `process.setConfig` and `process.setArgs` if you are interested. Once again, it's possible to wrap the instantiation of `Process` objects in your own custom functions, allowing you to tweak the default configuration options for your own requirements. For example, if you always want to wrap coordinates to the minimum image when using AMBER, then this could be achieved as follows:\n",
-    "\n",
-    "```python\n",
-    "# myconfig/Process.py\n",
-    "import BioSimSpace as BSS\n",
-    "\n",
-    "# Wrap the instantiation of BSS.Process.Amber objects to configure them\n",
-    "# such that coordinates are always wrapped to the minimum image.\n",
-    "def Amber(system, protocol, exe=None, name=\"amber\",\n",
-    "            work_dir=None, seed=None, property_map={}):\n",
-    "\n",
-    "    # Create process using the passed parameters.\n",
-    "    process = BSS.Process.Amber(system,\n",
-    "                                protocol,\n",
-    "                                exe=exe,\n",
-    "                                name=name,\n",
-    "                                work_dir=work_dir,\n",
-    "                                seed=seed,\n",
-    "                                property_map=property_map)\n",
-    "    \n",
-    "    # Get the config.\n",
-    "    config = process.getConfig()\n",
-    "    \n",
-    "    # Add coordinate wrapping to the end of the config.\n",
-    "    config[-1] = \"  iwrap=1,\"\n",
-    "    config.append(\" /\")\n",
-    "\n",
-    "    # Set the new config.\n",
-    "    process.setConfig(config)\n",
-    "    \n",
-    "    # Return the process.\n",
-    "    return process\n",
-    "```\n",
-    "\n",
-    "Let us know create our custom AMBER process and check the configuration:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "unsigned-policy",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from myconfig.Process import *\n",
-    "\n",
-    "process = Amber(system, protocol)\n",
-    "process.getConfig()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "considered-trinidad",
    "metadata": {},
    "source": [
@@ -518,7 +408,7 @@
    "outputs": [],
    "source": [
     "protocol = BSS.Protocol.Equilibration(\n",
-    "    runtime=20 * BSS.Units.Time.picosecond,\n",
+    "    runtime=1 * BSS.Units.Time.picosecond,\n",
     "    temperature_start=0 * BSS.Units.Temperature.kelvin,\n",
     "    temperature_end=300 * BSS.Units.Temperature.kelvin,\n",
     "    restraint=\"backbone\",\n",
@@ -748,152 +638,6 @@
    "source": [
     "view.savePDB(\"my_view.pdb\", index=0)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "welcome-dividend",
-   "metadata": {},
-   "source": [
-    "### Reading and analysing trajectory data¶ \n",
-    "\n",
-    "The `BSS.Trajectory` package comes with a set of tools for reading and analysis trajectory files. Files can be loaded directly, or if supported, can be read from a running process.\n",
-    "\n",
-    "For example, to get the trajectory from the process, run:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "massive-christmas",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "traj = process.getTrajectory()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "northern-governor",
-   "metadata": {},
-   "source": [
-    "(If you get an error, then the trajectory file may be in the process of being written. Simply try again.)\n",
-    "\n",
-    "To get the current number of frames:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aging-affiliation",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "traj.nFrames()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "judicial-victor",
-   "metadata": {},
-   "source": [
-    "To get all of the frames as a list of `System` objects:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "featured-infrastructure",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "frames = traj.getFrames()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "alternative-concert",
-   "metadata": {},
-   "source": [
-    "Specific frames can be extracted by passing a list of indices, e.g. the first and last:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "liquid-harvey",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "frames = traj.getFrames([0, -1])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "conditional-gross",
-   "metadata": {},
-   "source": [
-    "Like most things in BioSimSpace, the `Trajectory` class is simply a wrapper around existing tools. Internally, trajectories are stored as an [MDTraj](http://mdtraj.org) object. This can be obtained, allowing the user direct access to the full power of MDTraj:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "suited-donor",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mdtraj = traj.getTrajectory()\n",
-    "type(mdtraj)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "nervous-white",
-   "metadata": {},
-   "source": [
-    "Alternatively, a trajectory can be returned in [MDAnalysis](https://www.mdanalysis.org) format:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "assisted-internship",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mdanalysis = traj.getTrajectory(format=\"mdanalysis\")\n",
-    "type(mdanalysis)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "talented-miniature",
-   "metadata": {},
-   "source": [
-    "The `Trajectory` class also provides wrappers around some basic MDTraj analysis tools, allowing the user to compute quantities such as the root mean squared displacement (RMSD).\n",
-    "\n",
-    "Let's measure the RMSD of the alanine-dipeptide molecule with a reference to its configuration in the first trajectory frame. To extract the alanine-dipeptide, we search the system for a residue named ALA. We'll also plot the RMSD for each frame of the trajectory.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "saving-laser",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Search the system for a residue named ALA. Since there is a single match,\n",
-    "# we take the first result.\n",
-    "molecule = system.search(\"mol with resname ALA\").molecules()[0]\n",
-    "\n",
-    "# Get the indices of the atoms in the molecule, relative to the original system.\n",
-    "indices = [system.getIndex(x) for x in molecule.getAtoms()]\n",
-    "\n",
-    "# Compute the RMSD for each frame and plot the result.\n",
-    "BSS.Notebook.plot(\n",
-    "    y=process.getTrajectory(backend=\"mdtraj\").rmsd(frame=0, atoms=indices), xlabel=\"Frame\"\n",
-    ")"
-   ]
   }
  ],
  "metadata": {
@@ -912,7 +656,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
